Actions
Bug #9608
closedqede: error: 'free_buffer_count' may be used uninitialized in this function
Start date:
2018-06-15
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
../../common/io/qede/qede_fp.c:524:24: error: 'free_buffer_count' may be used uninitialized in this function [-Werror=maybe-uninitialized] if (free_buffer_count < ~~~~~~~~~~~~~~~~~~^ rx_ring->rx_low_buffer_threshold) { ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
set it to 0.
Updated by Electric Monk about 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 3df3d01f9da8be5cdd1e81a5d050c24ccc55caa9
commit 3df3d01f9da8be5cdd1e81a5d050c24ccc55caa9 Author: Toomas Soome <tsoome@me.com> Date: 2018-07-30T17:30:14.000Z 9608 qede: error: 'free_buffer_count' may be used uninitialized in this function Reviewed by: Andy Fiddaman <af@citrus-it.net> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Ken Mays <kmays2000@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions