9608 qede: error: 'free_buffer_count' may be used uninitialized in this function Reviewed by: Andy Fiddaman <af@citrus-it.net> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Reviewed by: Ken Mays <kmays2000@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>